aks-custom-policy/manifests/IngressHostnameConstraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRestrictIngressHostname
metadata:
  name: global-restrict-ingress-hostname
spec:
  match:
    kinds:
      - apiGroups: ["extensions", "networking.k8s.io"]
        kinds: ["Ingress"]
